3-tenant-workloads/team-a/gitops-repo/rendered-manifests/app-b/rendered.yaml
---
# Source: app-b/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b
  labels:
    helm.sh/chart: app-b-0.1.0
    app.kubernetes.io/name: app-b
    app.kubernetes.io/instance: app-b
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    team: team-a
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app-b
    app.kubernetes.io/instance: app-b
---
# Source: app-b/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  labels:
    helm.sh/chart: app-b-0.1.0
    app.kubernetes.io/name: app-b
    app.kubernetes.io/instance: app-b
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    team: team-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-b
      app.kubernetes.io/instance: app-b
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: app-b-autoinstrumentation
      labels:
        helm.sh/chart: app-b-0.1.0
        app.kubernetes.io/name: app-b
        app.kubernetes.io/instance: app-b
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: Helm
        team: team-a
    spec:
      serviceAccountName: app-b
      containers:
        - name: app-b
          image: "ghcr.io/ok-karthik/platform-engineering-idp-gitops-reference-architecture/team-a/app-b:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
# Source: app-b/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-b
  labels:
    helm.sh/chart: app-b-0.1.0
    app.kubernetes.io/name: app-b
    app.kubernetes.io/instance: app-b
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    team: team-a
spec:
  ingressClassName: traefik
  rules:
    - host: "app-b.team-a.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-b
                port:
                  number: 8080
